Application page should now work correctly on mobile

--- a/css/application.css
+++ b/css/application.css
@@ -866,6 +866,14 @@ p{
   width: 95%:
 }
 
+.col-p{
+  padding-right: 1.5rem;
+}
+
+.row-p{
+  padding-top: 1.25rem;
+}
+
 .hover:hover{
   -webkit-box-shadow:0 1px 3px rgba(0,0,0,0.18), 0 1px 2px rgba(0,0,0,0.24);
   -moz-box-shadow:0 1px 3px rgba(0,0,0,0.18), 0 1px 2px rgba(0,0,0,0.24);
@@ -938,18 +946,34 @@ ol li a,ol li a:hover {
     margin-bottom: 1.25rem;
     margin-top: 1.25rem;
   }
-}
 
-@media only screen and (max-width: 1200px){
+  .modal-xl{
+    width: 100%;
+    max-width: 100%;
+    margin: auto;
+  }
+
+  .modal-lg{
+    width: 100%;
+    max-width: 100%;
+    margin: auto;
+  }
 
   .right-panel-col{
+    padding-right: 1rem;
     padding-left: 1rem;
   }
 
-  .middle p {
-    font-size:.9em;
+  .col-p{
+    padding-right: 1rem;
   }
 
+  .row-p{
+    padding-top: 0;
+  }
+}
+
+@media only screen and (max-width: 1200px){
   .bc-large{
     display: none;
   }
